--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "soulBotForDofus",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
