--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=Njc4NjUzMTkwMDk4NjQ5MTU1.Xkmayg.JXPEqGPqsvdRhs5YcxbG_PCFY6c
+DISCORD_TOKEN=Njc4NjUzMTkwMDk4NjQ5MTU1.XlKsNQ.M-X_0cpOF7hIbJ17P5RuhNXLcOw
