--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js -p $PORT"
   },
   "compilerOptions": {
     "module": "commonjs",
