--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "node_modules"
   ],
   "dependencies": {
+    "@discordjs/uws": "^10.149.0",
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pg": "^7.18.2",
+    "ws": "^7.2.2"
   },
   "name": "soulbothosted",
   "version": "1.0.0",
